--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,9 @@ a {
         color: #000; }
     .site-navbar-wrap.scrolled .site-navbar .site-navigation .site-menu > li.active > a {
       color: #f23a2e !important; }
+    .site-navbar-logo{
+      width: 175px;
+    }  
 
 .site-mobile-menu {
   width: 300px;
@@ -503,7 +506,7 @@ a {
     font-family: "Playfair Display"; }
     @media (min-width: 768px) {
       .site-blocks-cover h1 {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 900;
         line-height: 1.2; } }
   .site-blocks-cover p {
@@ -1370,7 +1373,7 @@ a {
 .caption {
   text-transform: uppercase;
   letter-spacing: .2em;
-  font-size: 12px;
+  font-size: 20px;
   padding: 7px 10px;
   color: #fff;
   display: inline-block; }
@@ -1427,3 +1430,7 @@ a {
   cursor: zoom-in; }
   .img-opacity:hover img {
     opacity: .5; }
+.our-yard:hover {
+  flex:0 0 50%;
+  max-width: 100%;
+}
