--- a/css/style.css
+++ b/css/style.css
@@ -1264,7 +1264,7 @@ a {
     color: #000; }
 
 .quick-contact-info {
-  background: #000;
+  background: #3a699a;;
   color: rgba(255, 255, 255, 0.5); }
   .quick-contact-info h2 {
     color: #fff;
