--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,12 @@ a {
     box-shadow: none !important; }
 
 .site-section {
+
   padding: 3em 0; }
   @media (min-width: 768px) {
     .site-section {
-      padding: 7em 0; } }
+     /* padding: 7em 0;*/
+      padding-top: 10px; } }
   .site-section.site-section-sm {
     padding: 4em 0; }
 
