--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,10 @@ a {
   @media (min-width: 768px) {
     .site-section {
      /* padding: 7em 0;*/
-      padding-top: 10px; } }
+      padding-top: 10px;
+      padding-left: 50px; 
+      } 
+    }
   .site-section.site-section-sm {
     padding: 4em 0; }
 
@@ -422,7 +425,7 @@ a {
         color: #f23a2e; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
-      right: 0px;
+      right: 150px;
       top: 10px;
       z-index: 20;
       width: 36px;
