--- a/css/style.css
+++ b/css/style.css
@@ -1481,6 +1481,8 @@ footer{
   border-radius: 50%;
   background-color:#fff;
   position: relative;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .menu-btn span,
