--- a/css/style.css
+++ b/css/style.css
@@ -1459,6 +1459,7 @@ a {
 .white {
   color: #fff;
 }
+
 .phone{
   font-size: 1.5rem;
 }
@@ -1567,4 +1568,13 @@ footer{
 .menu-nav_active{
   transform: scaleX(1) translateX(0%);
   opacity: 1;
+}
+.text-centr{
+  text-align: center;
+}
+.d-none{
+  display: none;
+}
+.menu{
+  padding-right: 20px;
 }
