--- a/css/style.css
+++ b/css/style.css
@@ -1579,3 +1579,9 @@ footer{
 .menu{
   padding-right: 20px;
 }
+.menu-block__phone{
+  width: 200px;
+    margin-left: 15px;
+    font-size: 1rem;
+    font-weight: 600;
+}
