--- a/css/style.css
+++ b/css/style.css
@@ -1579,3 +1579,26 @@ footer{
 .menu{
   padding-right: 20px;
 }
+.header-phone{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #00bfff;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 769px){
+    .container__top{
+    margin-top: 200px;
+}
+  }
+@media (max-width: 600px){
+    .container__top{
+    margin-top: 220px;
+}
+  }
+  @media (max-width: 500px){
+    .container__top{
+    margin-top: 280px;
+}
+  }
